--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -2,7 +2,7 @@
 @page "/all"
 @using GUI.Components.Client
 @using GUI.Components.Individual
-@inject Controller ClientClass
+@inject Controller Controller
 @inject ISnackbar Snackbar
 @inject Model Model
 @inject IJSRuntime JS
@@ -50,18 +50,20 @@
     </MudRadioGroup>
     if (PaperView == 0)
     {
-        @if (IsVizualize){
+        @if (IsVizualize)
+        {
         <TreeView Name="All Estates" @key="Model.VisualizationNodeAll" VisualizationNode="Model.VisualizationNodeAll" />
          <TreeView Name="Parcels" @key="Model.VisualizationNodeParcels" VisualizationNode="Model.VisualizationNodeParcels" />
         <TreeView Name="Properties" @key="Model.VisualizationNodeProperties" VisualizationNode="Model.VisualizationNodeProperties" />
         }
     } else
     {
-        <ResultView OnEstatesDeleted="VisualizeAll" OnEstatesChanged="EstateChanged" @key="findResults" List="findResults" />
+        <ResultView OnEstatesDeleted="EstateDeleted" OnEstatesChanged="EstateChanged"  @key="findResults" List="findResults" />
     }
 } else
 {
-    @if(IsVizualize){
+    @if(IsVizualize)
+    {
     <TreeView Name="All Estates" @key="Model.VisualizationNodeAll" VisualizationNode="Model.VisualizationNodeAll"/>
     <TreeView Name="Parcels" @key="Model.VisualizationNodeParcels" VisualizationNode="Model.VisualizationNodeParcels" />
     <TreeView Name="Properties" @key="Model.VisualizationNodeProperties" VisualizationNode="Model.VisualizationNodeProperties" />
