--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -25,7 +25,7 @@
         <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="DeleteTrees">Delete Structures</MudButton>
     </MudItem>
     <MudItem>
-        <MudFileUpload T="IBrowserFile" Accept=".csv" FilesChanged="UploadFiles">
+        <MudFileUpload T="IBrowserFile" Accept=".csv" FilesChanged="UploadFiles" @ref="fileUpload">
             <ActivatorContent>
                 <MudButton Variant="Variant.Filled"
                            Color="Color.Primary"
